cloud-deploy/kustomize/readinglist-ui/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: readinglist-ui
  name: readinglist-ui
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: readinglist-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: readinglist-ui
    spec:
      containers:
      - image: registry.localhost:5000/readinglist:v0.0.1
        imagePullPolicy: IfNotPresent
        name: readinglist-ui
        command: ["./readinglist-ui", "-port", "8080"]
        ports:
        - containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
