cloud-deploy/kustomize/readinglist-ui/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: readinglist-ui
  name: readinglist-ui
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: readinglist-ui
